draw4 practice finished.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
         <activity android:name=".draw3.Draw3Activity">
         </activity>
+        <activity android:name=".draw4.Draw4Activity">
+        </activity>
     </application>
 
 </manifest>
